updates ui elements gets rid of side panel calendar

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -13,10 +13,10 @@
     "labels": "Labels"
   },
   "tabs": {
-    "disc": "Disc",
+    "structure": "Structure",
     "list": "List",
     "calendar": "Calendar",
-    "zoom": "Zoom"
+    "filter": "Filter"
   },
   "zoom": {
     "quarters": "Quarters",
