add translations for monday oauth and profile page

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -20,6 +20,7 @@
     "loading": "Signing in...",
     "orContinueWith": "or continue with",
     "google": "Google",
+    "monday": "Monday.com",
     "noAccount": "No account? Sign up"
   },
   "signup": {
