--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -229,6 +229,12 @@
     "email": "Email",
     "userId": "User ID",
     "memberSince": "Member since",
+    "mondayIntegration": "Monday.com Integration",
+    "mondayConnected": "Connected",
+    "mondayUserId": "Monday User ID",
+    "mondayAccount": "Account",
+    "mondaySubscriptionStatus": "Subscription Status",
+    "mondayPlan": "Plan",
     "googleIntegrations": "Google Integrations",
     "googleIntegrationsDescription": "Connect your Google account to sync data from Calendar and Sheets to your wheels.",
     "loadingIntegrations": "Loading integrations...",
