--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -228,6 +228,12 @@
     "email": "E-post",
     "userId": "Användar-ID",
     "memberSince": "Medlem sedan",
+    "mondayIntegration": "Monday.com Integration",
+    "mondayConnected": "Ansluten",
+    "mondayUserId": "Monday Användar-ID",
+    "mondayAccount": "Konto",
+    "mondaySubscriptionStatus": "Prenumerationsstatus",
+    "mondayPlan": "Plan",
     "googleIntegrations": "Google Integrationer",
     "googleIntegrationsDescription": "Anslut ditt Google-konto för att synkronisera data från Calendar och Sheets till dina hjul.",
     "loadingIntegrations": "Laddar integrationer...",
