--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -20,6 +20,7 @@
     "loading": "Loggar in...",
     "orContinueWith": "eller fortsätt med",
     "google": "Google",
+    "monday": "Monday.com",
     "noAccount": "Inget konto? Registrera dig"
   },
   "signup": {
