Lägger till översättningar för typ, etikett och noType/noLabel

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -397,6 +397,8 @@
     "item": "Item",
     "person": "Person",
     "status": "Status",
+    "type": "Type",
+    "label": "Label",
     "date": "Date",
     "timeline": "Timeline",
     "delete": "Delete",
@@ -408,6 +410,8 @@
     "noRings": "No rings found. Create rings to get started.",
     "noActivityGroups": "You must create at least one activity group first",
     "noStatus": "No status",
+    "noType": "No type",
+    "noLabel": "—",
     "newItem": "New item",
     "selected": "selected",
     "moveToRing": "Move to ring...",
