--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -396,6 +396,8 @@
     "item": "Aktivitet",
     "person": "Person",
     "status": "Status",
+    "type": "Typ",
+    "label": "Etikett",
     "date": "Datum",
     "timeline": "Tidslinje",
     "delete": "Ta bort",
@@ -407,6 +409,8 @@
     "noRings": "Inga ringar hittades. Skapa ringar för att komma igång.",
     "noActivityGroups": "Du måste skapa minst en aktivitetsgrupp först",
     "noStatus": "Ingen status",
+    "noType": "Ingen typ",
+    "noLabel": "—",
     "newItem": "Ny aktivitet",
     "selected": "valda",
     "moveToRing": "Flytta till ring...",
