updates swedish translation

--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -399,7 +399,7 @@
     "type": "Typ",
     "label": "Etikett",
     "date": "Datum",
-    "timeline": "Tidslinje",
+    "timeline": "Längd",
     "delete": "Ta bort",
     "edit": "Redigera",
     "actions": "Åtgärder",
