Add PDF Report export with activity list and wheel image

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -171,6 +171,8 @@
     "jpegDesc": "Smaller file size",
     "svgDesc": "Scalable vector graphics",
     "pdfDesc": "Print-ready document",
+    "pdfReport": "PDF Report",
+    "pdfReportDesc": "Activity list + wheel image",
     "copyToClipboard": "Copy to clipboard",
     "downloadImage": "Download image",
     "versionHistory": "Show version history",
