Add i18n translations for save dropdown

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -182,6 +182,16 @@
     "saving": "Saving...",
     "saveToDatabase": "Save to database",
     "saveToBrowser": "Save to browser storage",
+    "saveOptions": "More save options",
+    "chooseSaveMode": "Choose save mode",
+    "quickSave": "Quick Save",
+    "quickSaveDesc": "Save changes quickly without creating checkpoint",
+    "createCheckpoint": "Create Checkpoint",
+    "createCheckpointDesc": "Save complete snapshot for safe restoration",
+    "versionBadge": "Version",
+    "saveMenuOr": "OR",
+    "saveMenuTip": "Tip:",
+    "saveMenuTipText": "Use checkpoints before major changes",
     "showGuide": "Show quick guide",
   "startTour": "Show quick tour",
   "aiTour": "Show AI tour",
