--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -181,6 +181,16 @@
     "saving": "Sparar...",
     "saveToDatabase": "Spara till databas",
     "saveToBrowser": "Spara till webbläsarlagring",
+    "saveOptions": "Fler sparalternativ",
+    "chooseSaveMode": "Välj sparläge",
+    "quickSave": "Snabbspara",
+    "quickSaveDesc": "Spara ändringar snabbt utan att skapa checkpoint",
+    "createCheckpoint": "Skapa checkpoint",
+    "createCheckpointDesc": "Spara komplett ögonblicksbild för säker återställning",
+    "versionBadge": "Version",
+    "saveMenuOr": "ELLER",
+    "saveMenuTip": "Tips:",
+    "saveMenuTipText": "Använd checkpoints före större ändringar",
     "showGuide": "Visa snabbguide",
   "startTour": "Starta snabbguide",
   "aiTour": "Starta AI-guide",
