Option B: Consolidate header dropdowns and move version history to save menu

--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -175,6 +175,7 @@
     "copyToClipboard": "Kopiera till urklipp",
     "downloadImage": "Ladda ner bild",
     "versionHistory": "Visa versionshistorik",
+    "viewPreviousVersions": "Visa och återställ tidigare versioner",
     "history": "Historik",
     "aiAssistant": "AI Assistent",
     "moreOptions": "Fler alternativ",
