--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -176,6 +176,7 @@
     "copyToClipboard": "Copy to clipboard",
     "downloadImage": "Download image",
     "versionHistory": "Show version history",
+    "viewPreviousVersions": "View and restore previous versions",
     "history": "History",
     "aiAssistant": "AI Assistant",
     "moreOptions": "More options",
