Fix template button height and confirm dialog z-index

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -198,6 +198,8 @@
   "aiTour": "Show AI tour",
     "template": "Template",
     "markAsTemplate": "Mark as template",
+    "makeTemplate": "Template",
+    "isTemplate": "✓ Template",
     "templateWheelVisibleOnLanding": "Template wheel (visible on landing page)",
     "useTemplate": "Use template",
     "wheelView": "Wheel view",
